--- a/HR_Payroll.Web/Views/MarkAttendance/AttendanceCalender.cshtml
+++ b/HR_Payroll.Web/Views/MarkAttendance/AttendanceCalender.cshtml
@@ -4,6 +4,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    /* Allow wrapping of event text */
+    .fc-daygrid-event {
+        white-space: normal !important;
+        overflow-wrap: break-word !important;
+        line-height: 1.1 !important;
+    }
+
+</style>
 <!-- Page-Title -->
 <div class="row">
     <div class="col-sm-12">
