--- a/HR_Payroll.Web/Views/MarkAttendance/AttendanceData.cshtml
+++ b/HR_Payroll.Web/Views/MarkAttendance/AttendanceData.cshtml
@@ -50,7 +50,7 @@
                             <tr>
                                 <th>Attendance Date</th>
                                 <th>Day</th>
-                                <th>Weekend</th>
+                               @*<th>Weekend</th> *@
                                 <th>Shift</th>
                                 <th>Check-In</th>
                                 <th>Check-Out</th>
