--- a/HR_Payroll.Web/Views/MarkAttendance/AttendanceCalender.cshtml
+++ b/HR_Payroll.Web/Views/MarkAttendance/AttendanceCalender.cshtml
@@ -38,53 +38,14 @@
         <div class="card">
             <div class="card-body">
                 <img src="~/assets/images/small/calendar.svg" alt="" class="img-fluid">
-                <ul class="list-group">
-                    <li class="list-group-item align-items-center d-flex">
-                        <div class="media">
-                            <img src="~/assets/images/small/project-1.jpg" class="me-3 thumb-sm align-self-center rounded-circle" alt="...">
-                            <div class="media-body align-self-center">
-                                <h6 class="mt-0 mb-1">Meeting with UI/UX Designers</h6>
-                                <p class="text-muted mb-0">Today 07:30 AM</p>
-                            </div><!--end media body-->
-                        </div>
-                    </li>
-                    <li class="list-group-item align-items-center ">
-                        <div class="media">
-                            <img src="~/assets/images/users/user-5.jpg" class="me-3 thumb-sm align-self-center rounded-circle" alt="...">
-                            <div class="media-body align-self-center">
-                                <h6 class="mt-0 mb-1">Lunch with my friend</h6>
-                                <p class="text-muted mb-0">Today 12:30 PM</p>
-                            </div><!--end media body-->
-                        </div>
-                    </li>
-                    <li class="list-group-item align-items-center">
-                        <div class="media">
-                            <img src="~/assets/images/small/project-3.jpg" class="me-3 thumb-sm align-self-center rounded-circle" alt="...">
-                            <div class="media-body align-self-center">
-                                <h6 class="mt-0 mb-1">Call for payment Project ID : #254136</h6>
-                                <p class="text-muted mb-0">Tomorrow 10:30 AM</p>
-                            </div><!--end media body-->
-                        </div>
-                    </li>
-                    <li class="list-group-item align-items-center ">
-                        <div class="media">
-                            <img src="~/assets/images/users/user-4.jpg" class="me-3 thumb-sm align-self-center rounded-circle" alt="...">
-                            <div class="media-body align-self-center">
-                                <h6 class="mt-0 mb-1">Picnic with my Family</h6>
-                                <p class="text-muted mb-0">01 June 2019 - 09:30 AM</p>
-                            </div><!--end media body-->
-                        </div>
-                    </li>
-                    <li class="list-group-item align-items-center">
-                        <div class="media">
-                            <img src="~/assets/images/small/project-4.jpg" class="me-3 thumb-sm align-self-center rounded-circle" alt="...">
-                            <div class="media-body align-self-center">
-                                <h6 class="mt-0 mb-1">Meeting with Developers</h6>
-                                <p class="text-muted mb-0">04 June 2019 - 07:30 AM</p>
-                            </div><!--end media body-->
-                        </div>
+
+                <!-- 🔥 Dynamic Attendance Details Box -->
+                <ul class="list-group" id="attendanceDetailsBox">
+                    <li class="list-group-item text-center text-muted">
+                        Click any day on the calendar to see details here
                     </li>
                 </ul>
+
             </div><!--end card-body-->
         </div><!--end card-->
     </div><!--end col-->
