--- a/HR_Payroll.Web/Views/Shared/_Layout.cshtml
+++ b/HR_Payroll.Web/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
 
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="AdminDashboard" asp-controller="Dashboard">Analytics Data</a>
+                            <a class="nav-link" asp-action="AdminDashboard" asp-controller="Dashboard">Dashboard Analytics</a>
                         </li><!--end nav-item-->
                     </ul><!--end nav-->
                 </div><!-- end Dashboards -->
@@ -291,7 +291,7 @@
                         </div>
                         <!-- All-->
                         <a asp-action="AttendanceData" asp-controller="MarkAttendance" class="dropdown-item text-center text-primary">
-                            View all <i class="ti-arrow-right"></i>
+                            View all <i class="mdi mdi-chevron-right"></i>
                         </a>
                     </div>
                 </li>
