--- a/HR_Payroll.Web/Views/MarkAttendance/AttendanceData.cshtml
+++ b/HR_Payroll.Web/Views/MarkAttendance/AttendanceData.cshtml
@@ -66,6 +66,20 @@
     </div> <!-- end col -->
 </div> <!-- end row -->
 
+<div class="modal fade" id="attendanceModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Attendance Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body" id="attendanceModalBody">
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!-- Javascript  -->
 <script src="~/js/jquery-3.6.4.min.js"></script>
 <script src="~/js/attendance/attendance_report.js"></script>
