--- a/HR_Payroll.Web/Views/Shared/_Layout.cshtml
+++ b/HR_Payroll.Web/Views/Shared/_Layout.cshtml
@@ -95,11 +95,11 @@
                     </ul><!--end nav-->
                 </div><!--end /div-->
             </div><!--end main-icon-menu-body-->
-            <div class="pro-metrica-end">
+           @*  <div class="pro-metrica-end">
                 <a href="#" class="profile">
                     <img src="~/assets/images/users/user-4.jpg" alt="profile-user" class="rounded-circle thumb-sm">
                 </a>
-            </div><!--end pro-metrica-end-->
+            </div><!--end pro-metrica-end--> *@
         </div>
         <!--end main-icon-menu-->
 
@@ -108,7 +108,7 @@
             <div class="topbar-left">
                 <a href="https://drctstech.com/" class="logo">
                     <span>
-                        <img src="~/assets/images/logos/drcts-dark-logo.png" alt="logo-large" class="logo-lg logo-dark">
+                        <img src="~/assets/images/logos/drcts-dark-logo.png" alt="logo-large" class="logo-lg logo-light">
                         <img src="~/assets/images/logos/drcts-white-logo.png" alt="logo-large" class="logo-lg logo-light">
                     </span>
                 </a><!--end logo-->
