--- a/HR_Payroll.Web/Views/Home/Login.cshtml
+++ b/HR_Payroll.Web/Views/Home/Login.cshtml
@@ -42,7 +42,7 @@
                 </svg>
 
                 <div class="brand">
-                    <div class="logo">HR</div>
+                    <div class="logo"><img src="~/assets/images/logos/drcts_logo.png" height="30" alt="logo" class="auth-logo"></div>
                     <div>
                         <h1>Login</h1>
                         <p>Sign in to manage your profile and attendance</p>
@@ -55,12 +55,12 @@
 
                     <label>Password</label>
                     <div class="pass-wrap" style="position:relative;">
-                        <input id="userpassword" class="input" type="password" placeholder="Enter password" required />
+                        <input id="userpassword" class="input" type="password" placeholder="Enter password" value="@Model.Password" required />
                         <span id="togglePwd" >👁️</span>
                     </div> 
                      <div style="display:flex;justify-content:space-between;margin-top:4px">
                         <label style="font-size:13px"><input type="checkbox" id="rememberMe" value="true" @(Model.RememberMe ? "checked" : "") /> Remember me</label>
-                      @* <a href="#">Forgot?</a> *@
+                        @* <a asp-action="ForgotPassword" asp-controller="Home">Forgot password?</a> *@
                     </div> 
 
                     <button class="btn" id="submitbtn" type="button">Sign In<i class="fas fa-sign-in-alt ms-1"></i></button>
@@ -71,7 +71,7 @@
                     </div> -->
                 </form>
 
-                <div class="credits">© <span id="year"></span> Your Company</div>
+                <div class="credits">© <span id="year"></span> DRCTS TECH</div>
             </div>
 
         </div>
@@ -90,6 +90,8 @@
             </div>
         </div>
     </div>
+
+    <!-- Javascript  -->
     <script src="~/js/jquery-3.6.4.min.js"></script>
     <!-- vendor js -->
     <script src="~/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
