--- a/HR_Payroll.Web/Views/MarkAttendance/AttendanceData.cshtml
+++ b/HR_Payroll.Web/Views/MarkAttendance/AttendanceData.cshtml
@@ -85,6 +85,9 @@
                     Employee Attendance Report
                 </h5>
                 <div class="btn-group">
+                    <button id="refreshData" class="btn btn-outline-primary btn-sm">
+                        <i class="mdi mdi-refresh"></i> Refresh
+                    </button>
                     <button id="exportCsv" class="btn btn-outline-success btn-sm">
                         <i class="mdi mdi-file-excel-outline me-1"></i> CSV
                     </button>
