--- a/HR_Payroll.Web/Views/Shared/_Layout.cshtml
+++ b/HR_Payroll.Web/Views/Shared/_Layout.cshtml
@@ -190,6 +190,11 @@
                                 <a class="nav-link" asp-action="EmployeeMaster" asp-controller="Employee">Employee Master</a>
                             </li><!--end nav-item-->
                         </ul><!--end nav-->
+                          <ul class="nav flex-column">                         
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="EmployeeList" asp-controller="Employee">Employee List</a>
+                            </li><!--end nav-item-->
+                        </ul><!--end nav-->
                     </div><!-- end Master -->
                 }
                 else
