--- a/HR_Payroll.Web/Views/Home/Login.cshtml
+++ b/HR_Payroll.Web/Views/Home/Login.cshtml
@@ -71,7 +71,7 @@
                     </div> -->
                 </form>
 
-                <div class="credits">© <span id="year"></span> DRCTS TECH</div>
+                <div class="credits">© <span id="year"></span> @ViewBag.CompanyName</div>
             </div>
 
         </div>
