--- a/HR_Payroll.Web/Views/Shared/_Layout.cshtml
+++ b/HR_Payroll.Web/Views/Shared/_Layout.cshtml
@@ -171,14 +171,18 @@
                                     <div class="collapse " id="sidebarCrypto">
                                         <ul class="nav flex-column">
                                             <li class="nav-item">
+                                                <a class="nav-link"  asp-action="AssignEmployeeShift" asp-controller="Assign">Assign Employee Shift</a>
+                                            </li><!--end nav-item-->
+                                           @*  <li class="nav-item">
                                                 <a class="nav-link"  asp-action="AssignManager" asp-controller="Assign">Assign Manager</a>
                                             </li><!--end nav-item-->
                                             <li class="nav-item">
                                                 <a class="nav-link"  asp-action="AssignTeamLeader" asp-controller="Assign">Assign TeamLeader</a>
-                                            </li><!--end nav-item-->
+                                            </li><!--end nav-item--> *@
                                             <li class="nav-item">
                                                 <a class="nav-link"  asp-action="AssignEmployee" asp-controller="Assign">Assign Employee</a>
-                                            </li><!--end nav-item-->                                          
+                                            </li><!--end nav-item-->     
+                                             
                                         </ul><!--end nav-->
                                     </div><!--end sidebarCrypto-->
                                 </li><!--end nav-item-->
