--- a/HR_Payroll.Web/Views/Employee/EmployeeMaster.cshtml
+++ b/HR_Payroll.Web/Views/Employee/EmployeeMaster.cshtml
@@ -40,13 +40,13 @@
                                 </div>
                                   <div class="col-md-6 mb-2">
                                     <label class="form-label">Mobile</label>
-                                    <input type="tel" class="form-control" placeholder="Last Name" id="mobile" data-required="true" maxlength="10"
+                                    <input type="tel" class="form-control" placeholder="Mobile Number" id="mobile" data-required="true" maxlength="10"
                                            pattern="[6-9][0-9]{9}"
                                            oninput="this.value=this.value.replace(/[^0-9]/g,'')">
                                 </div>
                                 <div class="col-md-6 mb-2">
                                     <label class="form-label">Email</label>
-                                    <input type="email" class="form-control" placeholder="Last Name" id="email" data-required="true">
+                                    <input type="email" class="form-control" placeholder="Email Address" id="email" data-required="true">
                                 </div>
                                 <div class="col-md-6 mb-2">
                                     <label class="form-label">Department</label>
