--- a/HR_Payroll.Web/Views/Shared/_Layout.cshtml
+++ b/HR_Payroll.Web/Views/Shared/_Layout.cshtml
@@ -231,7 +231,7 @@
                 }
                 @if (userTypeId != 1)
                 {
-                    <div  class="main-icon-menu-pane tab-pane" role="tabpanel" aria-labelledby="pages-tab">
+                    <div id="DrctsPayroll" class="main-icon-menu-pane tab-pane" role="tabpanel" aria-labelledby="pages-tab">
                         <div class="title-box">
                             <h6 class="menu-title">Payroll</h6>
                         </div>
